--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="label_event_memo">メモ</string>
     <string name="label_event_memo_hint">メモ</string>
     <string name="event_mark">●</string>
+    <string name="menu_delete">削除</string>
 </resources>
